# Tsunami-Simulation

./: .gitignore  .gitmodules  CMakeLists.txt  loopReport.txt  vectorreport.txt
CMake/: FindCatch2.cmake
Projektplan/: Projektplan.docx
SWE1D/: CMakeLists.txt
SWE1D/Blocks/: WavePropagationBlock1D.cpp  WavePropagationBlock1D.h
SWE1D/Scenarios/: BathymetryScenario.cpp  BathymetryScenario.h  SubcriticalFlow.cpp  SubcriticalFlow.h
Source/: CMakeLists.txt
Source/Blocks/: Block.cpp  DimensionalSplitting.cpp  DimensionalSplitting.h  ReducedDimSplittingBlock.cpp  ReducedDimSplittingBlock.h  WavePropagationBlock.hpp
Source/FWave/: FWaveSolver_Task1.cpp  FWaveSolver_Task1.h
Source/Gui/: Gui.cpp  Gui.h
Source/Readers/: NetCDFReader.cpp  NetCDFReader.h  NetCDFUnbufferedReader.cpp  NetCDFUnbufferedReader.h
Source/Runners/: DimensionalSplitting-Runner.cpp  MPI-Runner.cpp
Source/Scenarios/: ArtificialTsunamiScenario.cpp  ArtificialTsunamiScenario.h  CheckpointScenario.cpp  CheckpointScenario.h  EarthquakeScenario.cpp  EarthquakeScenario.h  FileScenario.cpp  FileScenario.h  RadialDamBreakScenario.cpp  Scenario.cpp  Scenario.hpp  TsunamiScenario.cpp  TsunamiScenario.h  WorldScenario.cpp  WorldScenario.h
Source/Solvers/: FWaveSolver.cpp  FWaveSolver.h
Source/Tools/: Coarse.h  Float2D.hpp  Interval.h  Logger.cpp  Logger.hpp  WarningSystem.cpp  WarningSystem.h
Source/Writers/: NetCDFWriter.cpp  NetCDFWriter.hpp
Tests/: ArtificialTsunamiScenarioTest.cpp  CMakeLists.txt  CoarseArrayTest.cpp  Task2ReaderTest.cpp  Task3ComparisonTest.cpp  Task3ComparisonTestXSweep.cpp  netCDFReaderTestBathymetry.cdl  netCDFReaderTestBathymetry.nc  netCDFReaderTestDisplacement.cdl  netCDFReaderTestDisplacement.nc
